...

    <!-- Exception Messages   -->
    <string name="generic_error">ERROR: %1$s</string>
    <string name="delete_default_aisle_exception">ERROR: Default Aisle can\'t be removed</string>
    <string name="duplicate_product_name_exception">ERROR: Product Name must be unique</string>
    <string name="duplicate_location_name_exception">ERROR: Location Name must be unique</string>
    <string name="duplicate_aisle_name_exception">ERROR: Aisle Name must be unique per list</string>
    <string name="invalid_location_exception">ERROR: Invalid Location Id provided</string>
    <string name="invalid_product_exception">ERROR: Invalid Product Id provided</string>
    <string name="invalid_db_name_exception">ERROR: Unable to determine database name</string>
    <string name="invalid_db_backup_file_exception">ERROR: Invalid backup target</string>
    <string name="invalid_db_restore_file_exception">ERROR: Invalid restore source</string>
    <string name="duplicate_product_exception">ERROR: Cannot add a duplicate of an existing product</string>
...
    <string name="save">Save</string>
    <string name="shop_name">Shop Name</string>
    <string name="add_location">Add Shop</string>
    <string name="edit_product">Edit Product</string>
    <string name="pin_shop">Pin Shop to Drawer</string>
    <string name="show_unmapped_products">Show Products in the \'No Aisle\' section</string>
    <string name="add_aisle">Add Aisle</string>
    <string name="new_aisle">New Aisle</string>
    <string name="add_another">Add Another</string>
    <string name="aisle_name">Aisle Name</string>
    <string name="id_label" translatable="false">id</string>
    <string name="done">Done</string>
    <string name="search_product_hint">Search Products…</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="delete_confirmation">Delete %1$s?</string>
    <string name="edit_aisle">Edit Aisle</string>
    <string name="edit_location">Edit Shop</string>
    <string name="main_fab">Main FAB</string>
    <string name="add_shop_fab">Add Shop FAB</string>
    <string name="add_aisle_fab">Add Aisle FAB</string>
    <string name="add_product_fab">Add Product FAB</string>
    <string name="search_fab">Search FAB</string>
...
